apps/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/part-of: paperless-ngx
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
